# CODE-AGENT-

./: .env.example  .gitignore  README.md  Untitled
agent/: .env.example  Dockerfile  projects.yaml  pyproject.toml
agent/src/: __init__.py  config.py  cursor_bridge.py  env_loader.py  goodbye.py  jobs.py  main.py  project_registry.py  telephony.py  voice_agent.py  workspace.py
agent/tests/: test_config.py  test_project_registry.py  test_telephony.py  test_workspace.py
docs/: telephony.md
frontend/: .env.example  app-config.ts  package.json
frontend/app/: layout.tsx
frontend/app/api/pick-folder/: route.ts
frontend/app/api/token/: route.ts
frontend/components/agents-ui/: agent-control-bar.tsx
frontend/components/app/: app.tsx  job-log-panel.tsx  session-status-bar.tsx  view-controller.tsx  welcome-view.tsx
frontend/components/ui/: button.tsx  toggle.tsx
frontend/hooks/: useCursorJobLog.ts  useEndCallOnSignal.ts  useSyncWorkspace.ts
frontend/lib/: pick-folder.ts  workspace.ts
frontend/styles/: globals.css
frontend/tools/FolderPicker/: .gitignore  FolderPicker.csproj  Program.cs  Program.netfx.cs  build-with-csc.ps1
frontend/tools/FolderPicker/.WindowsAPICodePack-Core-1.1.0/: .signature.p7s  WindowsAPICodePack-Core.nuspec
frontend/tools/FolderPicker/.WindowsAPICodePack-Core-1.1.0/_rels/: .rels
frontend/tools/FolderPicker/.WindowsAPICodePack-Shell-1.1.0/: .signature.p7s  WindowsAPICodePack-Shell.nuspec
frontend/tools/FolderPicker/.WindowsAPICodePack-Shell-1.1.0/_rels/: .rels
(+3 files in other folders)
